# rag-agent-with-fastapi

./: .gitignore  README.md  alembic.ini  main.py  memory.db  pyproject.toml
agent/: rag_agent.py
alembic/: env.py
alembic/versions/: 6fc363144230_.py  8f47ab6463ae_.py  90fd4e8d07e8_.py  a7e1775e9ef4_.py  b268131a1dd7_init.py
data/: data.txt
database/: database.py
models/: models.py
utils/: schemas.py  utils.py
