[project]
name = "backend-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "faiss-cpu>=1.12.0",
    "fastapi[all]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.28",
    "langchain-google-genai>=2.1.10",
    "langgraph>=0.6.6",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-jose[cryptograph,cryptography]>=3.5.0",
    "sqlalchemy>=2.0.43",
    "tiktoken>=0.11.0",
    "uvicorn[standard]>=0.35.0",
]
